# task-timer

./: .gitignore  README.md  pyproject.toml
task_timer/: __init__.py  __main__.py  cli.py  functions.py  task_manager.py
task_timer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
