[project]
name = "task-timer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
]

[project.scripts]
task-timer = "task_timer:main"
 
[tool.uv]
package = true

[dependency-groups]
dev = [
    "click>=8.1.8",
]
